# mustdo

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py
app/api/v1/: analyses.py
app/core/: config.py
app/db/: models.py  persistence.py  session.py
app/schemas/: analysis.py
app/services/: exceptions.py  mock_provider.py  openai_compatible_provider.py  todo_analyzer.py
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  config.py  db.py  deps.py  errors.py  main.py  schemas.py  security.py  time_utils.py
backend/app/routers/: auth.py  todos.py  voice.py
backend/app/services/: audio.py  deepseek.py  iflytek.py  todos.py  voice_stream.py
backend/scripts/: cleanup_overdue.py  create_invite.py  init_db.py  list_invites.py  server.sh
backend/tests/: test_auth.py  test_deepseek.py  test_errors.py  test_todos_api.py  test_voice.py
docs/: PROJECT.md  RENAME.md  api-design.md  dependency-management.md  mvp-implementation-plan.md
frontend/: .env.example  app.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts  types.ts
frontend/src/auth/: AuthPage.tsx
frontend/src/components/: Icons.tsx
frontend/src/todos/: TodoDashboard.tsx  TodoItem.tsx  types.ts
frontend/src/utils/: date.ts
frontend/src/voice/: VoiceButton.tsx  VoiceOverlay.tsx  audio.ts  types.ts  useVoiceRecorder.ts
miniprogram/: README.md  app.js  app.json  app.wxss  config.js  project.config.json
miniprogram/utils/: api.js  spring.js
(+7 files in other folders)
