[project]
name = "todo-analyzer-backend"
version = "0.1.0"
description = "FastAPI backend for the Todo Analyzer MVP"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
